# coffeecaller

./: .gitignore  CMakeLists.txt  Dockerfile  Kconfig  README.md  west.yml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: build-and-push-image.yml  ci.yml
applications/coffeecaller/: CMakeLists.txt  prj.conf  sample.yaml
boards/extensions/native_sim/: native_sim.conf  native_sim.overlay
boards/tiac/coffeecaller/: board.c  tiac_coffeecaller_nrf52840.dts  tiac_coffeecaller_nrf52840_defconfig
drivers/: CMakeLists.txt  Kconfig
drivers/led_strip/: CMakeLists.txt  Kconfig  fake_led_strip.c
drivers/pwm/: CMakeLists.txt  Kconfig  pwm_native_sim.c
dts/bindings/led_strip/: zephyr,fake-led-strip.yaml
dts/bindings/pwm/: zephyr,pwm-native-sim.yaml
include/cc_lib/: aldrin.h  button.h  leds.h  watchdog.h
lib/: CMakeLists.txt  Kconfig
lib/cc_lib/: CMakeLists.txt  aldrin.c  board.c  button.c  leds.c  watchdog.c
samples/subsys/cc_broadcast/: CMakeLists.txt  prj.conf  sample.yaml
samples/subsys/cc_coffeecall/: CMakeLists.txt  prj.conf  sample.yaml
subsys/: CMakeLists.txt  Kconfig
subsys/cc_broadcast/: CMakeLists.txt  Kconfig
subsys/cc_broadcast/src/: cc_bc_client_handling.c  cc_bc_client_handling.h  cc_bc_reset.c  cc_bc_serialization.c  cc_bc_serialization.h  cc_bc_transport.h  cc_bc_transport_localqueue.c  cc_bc_transport_openthread.c
subsys/cc_coffeecall/: CMakeLists.txt  Kconfig
subsys/cc_coffeecall/src/: cc_leds.c  cc_leds.h  cc_shell.c  main.c  (+4 more)
subsys/cc_temperature/: CMakeLists.txt  Kconfig
zephyr/: module.yml
(+18 files in other folders)
